--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="credits">
           Made with
           <div class="heart fas fa-heart"></div>
-          by Sid
+          by <a href="https://www.instagram.com/siddhu___________________/">Sid</a>
         </div>
       </div>
     </div>
