--- a/breath-clock.html
+++ b/breath-clock.html
@@ -6,6 +6,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="breath-clock.css" />
+    <meta name="theme-color" content="rgb(22, 48, 75)">
     <title>Breath Clock</title>
   </head>
 
