--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="breath-clock.css" />
+    <meta name="theme-color" content="rgb(22, 48, 75)">
     <title>Breath Clock</title>
   </head>
 
